stying on aboutus.html

--- a/pages/twobeers.html
+++ b/pages/twobeers.html
@@ -46,7 +46,7 @@
                   </ul>
                 </li>
                 <li>
-                  <a href="">Interbay</a>
+                  <a>Interbay</a>
                   <ul>
                     <li><a href="holymt.html">Holy Mountain Brewing</a></li>
                   </ul>
