took hover images off

--- a/pages/home.html
+++ b/pages/home.html
@@ -114,12 +114,11 @@
             <img src="../images/brewImages/cheers.jpg"/>
         </div>
     </div> 
-    <div id = "someWords">
     <p>Seattle Brewery Finder was started in a Code Fellows 201 class.  It was the final project idea of David Stoll.  The goal of Seattle Brewery Finder is to allow a user to find a Brewery in Seattle that meets their needs.  This site tells you if you can bring your dogs or children with you on your next outing.  </p>
-    </div>
     <div id='map'>
     <iframe src="https://www.google.com/maps/d/embed?mid=1VI9Lz2Gn27ZQEydghwelA-AHUMDl4lnS" width="900" height="480" align="middle"></iframe>
     </div>
+</section>
   <footer>
     <p>&copy Seattle Brewery Finders</p>
   </footer>
