--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                       <input id='eventsn' type="radio" name="event" value="no"><label>No</label>
                     </form>
                     <br>    
-                    <button id='button' type="button" >Start Brewing!</button>
+                    <button id='button' type="button" >Start Drinking!</button>
                 </div>
             </article>    
         </section>
