fixed drop down menu to avoid reloading page

--- a/pages/urbanfam.html
+++ b/pages/urbanfam.html
@@ -13,79 +13,79 @@
             <h1>Seattle Brewery Finder</h1>
         </div>
         <nav id="main_nav">
-              <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="../index.html">Finder</a></li>
-                <li><a href="">Breweries</a>
                 <ul>
-                  <li>
-                    <a href="">Ballard</a>
-                    <ul>
-                      <li><a href="peddler.html">Peddler Brewing</a></li>
-                      <li><a href="populuxe.html">Populuxe Brewing</a></li>
-                      <li><a href="reubens.html">Reuben's Brews</a></li>
-                    </ul>
+                  <li><a href="home.html">Home</a></li>
+                  <li><a href="../index.html">Finder</a></li>
+                  <li><a>Breweries</a>
+                  <ul>
+                    <li>
+                      <a>Ballard</a>
+                      <ul>
+                        <li><a href="peddler.html">Peddler Brewing</a></li>
+                        <li><a href="populuxe.html">Populuxe Brewing</a></li>
+                        <li><a href="reubens.html">Reuben's Brews</a></li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a>Capitol Hill</a>
+                      <ul>
+                        <li><a href="optimism.html">Optimism Brewing</a></li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a>Central District</a>
+                      <ul>
+                        <li><a href="standard.html">Standard Brewing</a></li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a>Fremont</a>
+                      <ul>
+                        <li><a href="fremont.html">Fremont Brewing</a></li>
+                        <li><a href="outlander.html">Outlander Brewing</a></li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a>Interbay</a>
+                      <ul>
+                        <li><a href="holymt.html">Holy Mountain Brewing</a></li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a>Lake City</a>
+                      <ul>
+                        <li><a href="hellbent.html">Hellbent Brewing</a></li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a>Magnolia</a>
+                      <ul>
+                        <li><a href="urbanfam.html">Urban Family Brewing</a></li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a>Pike Place</a>
+                      <ul>
+                        <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a>SoDo</a>
+                      <ul>
+                        <li><a href="twobeers.html">Two Beers Brewing</a></li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a>Ravenna</a>
+                      <ul>
+                        <li><a href="ravenna.html">Ravenna Brewing</a></li>
+                      </ul>
+                    </li>
+                  </ul>
                   </li>
-                  <li>
-                    <a href="">Capitol Hill</a>
-                    <ul>
-                      <li><a href="optimism.html">Optimism Brewing</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="">Central District</a>
-                    <ul>
-                      <li><a href="standard.html">Standard Brewing</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="">Fremont</a>
-                    <ul>
-                      <li><a href="fremont.html">Fremont Brewing</a></li>
-                      <li><a href="outlander.html">Outlander Brewing</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="">Interbay</a>
-                    <ul>
-                      <li><a href="holymt.html">Holy Mountain Brewing</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="">Lake City</a>
-                    <ul>
-                      <li><a href="hellbent.html">Hellbent Brewing</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="">Magnolia</a>
-                    <ul>
-                      <li><a href="urbanfam.html">Urban Family Brewing</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="">Pike Place</a>
-                    <ul>
-                      <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="">SoDo</a>
-                    <ul>
-                      <li><a href="twobeers.html">Two Beers Brewing</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="">Ravenna</a>
-                    <ul>
-                      <li><a href="ravenna.html">Ravenna Brewing</a></li>
-                    </ul>
-                  </li>
+                  <li><a href="aboutus.html">About Us</a></li>
                 </ul>
-                </li>
-                <li><a href="aboutus.html">About Us</a></li>
-              </ul>
-            </nav>
+              </nav>
     </header>
     <section>
       <div id='breweryInfo'>
