--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -133,7 +133,7 @@
           <h4>Github: <a href="https://github.com/DaveLestat">github.com/DaveLestat</a></h4>
           <h4>Email: </h4>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis ultricies enim. Nullam eu sapien lorem. Morbi sed metus a velit dapibus aliquet. Sed velit lectus, ullamcorper sed ex et, tincidunt suscipit lacus. Etiam ut mi orci. Fusce non ante ac augue sagittis feugiat. Mauris eu quam interdum, fringilla enim nec, bibendum tortor. Vivamus consectetur blandit sapien vitae dictum. Nam ante tortor, auctor sit amet tortor quis, sodales tempus quam. Vivamus sit amet nisi facilisis, viverra eros sed, imperdiet urna. Praesent et ornare ligula, sit amet vulputate nibh. Morbi tristique risus metus, nec placerat sapien mattis eget.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis ultricies enim. Nullam eu sapien lorem. Morbi sed metus a velit dapibus aliquet. Sed velit lectus, ullamcorper sed ex et, tincidunt suscipit lacus. Etiam ut mi orci. Fusce non ante ac augue sagittis feugiat. Mauris eu quam interdum, fringilla enim nec, bibendum tortor. Vivamus consectetur blandit sapien vitae dictum. Nam ante tortor, </p>
         <h4>Favorite Beer: </h4>
         <h4>Favorite Brewery: </h4>
       </div>
