--- a/pages/fremont.html
+++ b/pages/fremont.html
@@ -5,6 +5,7 @@
   <title>Fremont Brewing</title>
   <link rel="stylesheet" type="text/css" href="../css/breweries.css" />
   <link rel="stylesheet" type="text/css" href="../css/reset.css" />
+  <link rel="shortcut icon" href="../images/icons/beericon.jpg" type="image/x-icon" />
 </head>
 <body>
   <div id="wrapper">
