added my information in about us

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -145,11 +145,11 @@
         <h3>Phillip Kim</h3>
         <div class="contact">
           <h4>Github: <a href="https://github.com/pdkim">github.com/pdkim</a></h4>
-          <h4>Email: </h4>
+          <h4>Email: phildkim@gmail.com</h4>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis ultricies enim. Nullam eu sapien lorem. Morbi sed metus a velit dapibus aliquet. Sed velit lectus, ullamcorper sed ex et, tincidunt suscipit lacus. Etiam ut mi orci. Fusce non ante ac augue sagittis feugiat. Mauris eu quam interdum, fringilla enim nec, bibendum tortor. Vivamus consectetur blandit sapien vitae dictum. Nam ante tortor, auctor sit amet tortor quis, sodales tempus quam. Vivamus sit amet nisi facilisis, viverra eros sed, imperdiet urna. Praesent et ornare ligula, sit amet vulputate nibh. Morbi tristique risus metus, nec placerat sapien mattis eget.</p>
-        <h4>Favorite Beer: </h4>
-        <h4>Favorite Brewery: </h4>
+        <p>Currently a Software Test Engineer at Microsoft, Phillip Kim moved to the Redmond in 2007.  Though the job and people he met have been a great expereince for him, Phillip is reaching the point where additional skillsets are required to grow.  Hearing about Code Fellows from a friend, Phil has enjoyed his time at code Fellows and time spent working on Seattle Brewery Finder.</p>
+        <h4>Favorite Beer: Asahi Super Dry</h4>
+        <h4>Favorite Brewery: Optimism Brewery</h4>
       </div>
     </div>
   </main>
