--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -11,83 +11,83 @@
 <body>
   <div id="wrapper">
   <header>
-      <div id="logo">
-          <h1>Seattle Brewery Finder</h1>
-      </div>
-      <nav id="main_nav">
-          <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="../index.html">Finder</a></li>
-            <li><a href="">Breweries</a>
-            <ul>
-              <li>
-                <a href="">Ballard</a>
-                <ul>
-                  <li><a href="peddler.html">Peddler Brewing</a></li>
-                  <li><a href="populuxe.html">Populuxe Brewing</a></li>
-                  <li><a href="reubens.html">Reuben's Brews</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Capitol Hill</a>
-                <ul>
-                  <li><a href="optimism.html">Optimism Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Central District</a>
-                <ul>
-                  <li><a href="standard.html">Standard Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Fremont</a>
-                <ul>
-                  <li><a href="fremont.html">Fremont Brewing</a></li>
-                  <li><a href="outlander.html">Outlander Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Interbay</a>
-                <ul>
-                  <li><a href="holymt.html">Holy Mountain Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Lake City</a>
-                <ul>
-                  <li><a href="hellbent.html">Hellbent Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Magnolia</a>
-                <ul>
-                  <li><a href="urbanfam.html">Urban Family Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Pike Place</a>
-                <ul>
-                  <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">SoDo</a>
-                <ul>
-                  <li><a href="twobeers.html">Two Beers Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Ravenna</a>
-                <ul>
-                  <li><a href="ravenna.html">Ravenna Brewing</a></li>
-                </ul>
-              </li>
-            </ul>
-            </li>
-            <li><a href="aboutus.html">About Us</a></li>
-          </ul>
-        </nav>
+    <div id="logo">
+        <h1>Seattle Brewery Finder</h1>
+    </div>
+    <nav id="main_nav">
+      <ul>
+          <li><a href="pages/home.html">Home</a></li>
+          <li><a href="index.html">Finder</a></li>
+          <li><a href="">Breweries</a>
+              <ul>
+                <li>
+                  <a href="">Ballard</a>
+                  <ul>
+                    <li><a href="pages/peddler.html">Peddler Brewing</a></li>
+                    <li><a href="pages/populuxe.html">Populuxe Brewing</a></li>
+                    <li><a href="pages/reubens.html">Reuben's Brews</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Capitol Hill</a>
+                  <ul>
+                    <li><a href="pages/optimism.html">Optimism Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Central District</a>
+                  <ul>
+                    <li><a href="pages/standard.html">Standard Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Fremont</a>
+                  <ul>
+                    <li><a href="pages/fremont.html">Fremont Brewing</a></li>
+                    <li><a href="pages/outlander.html">Outlander Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Interbay</a>
+                  <ul>
+                    <li><a href="pages/holymt.html">Holy Mountain Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Lake City</a>
+                  <ul>
+                    <li><a href="pages/hellbent.html">Hellbent Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Magnolia</a>
+                  <ul>
+                    <li><a href="pages/urbanfam.html">Urban Family Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Pike Place</a>
+                  <ul>
+                    <li><a href="pages/cloudburst.html">Cloudburst Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">SoDo</a>
+                  <ul>
+                    <li><a href="pages/twobeers.html">Two Beers Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Ravenna</a>
+                  <ul>
+                    <li><a href="pages/ravenna.html">Ravenna Brewing</a></li>
+                  </ul>
+                </li>
+              </ul>
+          </li>
+          <li><a href="pages/aboutus.html">About Us</a></li>
+      </ul>
+    </nav>
   </header>
   <main>
     <div id="group">
@@ -142,10 +142,14 @@
     <div class="masterminds">
       <img class="name2" src= "http://via.placeholder.com/200x300">
       <div class="bio">
-        <h3>Phillip Kim</h3>
         <div class="contact">
-          <h4>Github: <a href="https://github.com/pdkim">github.com/pdkim</a></h4>
-          <h4>Email: phildkim@gmail.com</h4>
+          <div class="person">
+            <h3>Phillip Kim</h3>
+          </div>
+          <div class="website">
+            <h4>Github: <a href="https://github.com/pdkim">github.com/pdkim</a></h4>
+            <h4>Email: phildkim@gmail.com</h4>
+          </div>
         </div>
         <p>Currently a Software Test Engineer at Microsoft, Phillip Kim moved to the Redmond in 2007.  Though the job and people he met have been a great expereince for him, Phillip is reaching the point where additional skillsets are required to grow.  Hearing about Code Fellows from a friend, Phil has enjoyed his time at code Fellows and time spent working on Seattle Brewery Finder.</p>
         <h4>Favorite Beer: Asahi Super Dry</h4>
