added app.js to brewery pages

--- a/pages/cloudburst.html
+++ b/pages/cloudburst.html
@@ -126,5 +126,6 @@
       <p>&copy Seattle Brewery Finders</p>
     </footer>
   </div> <!-- wrapper -->
+  <script src = "../app.js"></script>
 </body>
 </html>
