--- a/pages/optimism.html
+++ b/pages/optimism.html
@@ -128,6 +128,6 @@
       <p>&copy Seattle Brewery Finders</p>
     </footer>
   </div>
-  <script src = "app.js"></script>
+  <script src = "../app.js"></script>
 </body>
 </html>
