--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Seattle Brewery Finder</h1>
       <nav id="main_nav">
         <ul>
-          <li><a href="home.html">Home</a></li>
+          <li><a href="../home.html">Home</a></li>
           <li><a href="../index.html">Finder</a></li>
           <li><a>Breweries</a>
           <ul>
