added pike brewing functionality

--- a/pages/pike.html
+++ b/pages/pike.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Ravenna Brewing</title>
+  <title>Pike Brewing Company</title>
   <link rel="stylesheet" type="text/css" href="../css/breweries.css" />
   <link rel="stylesheet" type="text/css" href="../css/reset.css" />
 </head>
@@ -67,6 +67,7 @@
                   <a>Pike Place</a>
                   <ul>
                     <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
+                    <li><a href="pike.html">Pike Brewing Company</a></li>
                   </ul>
                 </li>
                 <li>
@@ -89,38 +90,33 @@
     </header>
     <section>
       <div id='breweryInfo'>
-        <img src="../images/brewImages/ravenna.png" alt="ravenna brewing">
-        <h2>Ravenna Brewing</h2>
-        <p>With a rotating stock of ales this Ravenna neighborhood gem is a hit for the locals.  It’s a nice cozy brewery nestled next to an auto body shop.  Owner Tommy Ortega poured his famous Lion Tamer bourbon vanilla porter on opening night in April 2016.  </p>
+        <img src="../images/brewImages/pike.png" alt="pike brewing">
+        <h2>Pike Brewing Company</h2>
+        <p>Founded in 1989 by Charles and Rose Ann Finkel, Pike Brewing Company has become a staple of many locals and tourists that visit the Pike Place Market. Offering a family friendly spot to grab some food and a few good drinks, Pike offers an extremely welcoming pub as well as a more upscale eating experience in the upstairs shootoff, Tankard & Tun.  </p>
       </div>
       <div id='social'>
           <ul>
-              <li><a href="http://www.ravennabrewing.com">Ravenna Brewing Website</a></li>
-              <li><a href="https://www.facebook.com/RavennaBrewing/"><img src="../images/icons/facebook.png" alt="facebook logo"> Facebook</a></li>
-              <li><a href="https://twitter.com/RavennaBrewing"><img src="../images/icons/twitter.png" alt="twitter logo"> Twitter</a></li>
-              <li><a href="hhttp://instagram.com/ravennabrewing"><img src="../images/icons/instagram.png" alt="instagram logo"> Instagram</a></li>
-              <li><a href="https://untappd.com/RavennaBrewingCo"><img src="../images/icons/untappd.png" alt="untappd logo"> Untappd</a></li>
+              <li><a href="https://www.pikebrewing.com/">Pike Brewing Website</a></li>
+              <li><a href="https://www.facebook.com/Pikebrewingcompany"><img src="../images/icons/facebook.png" alt="facebook logo"> Facebook</a></li>
+              <li><a href="https://twitter.com/pikebrewing"><img src="../images/icons/twitter.png" alt="twitter logo"> Twitter</a></li>
+              <li><a href="https://www.instagram.com/pikebrewing/"><img src="../images/icons/instagram.png" alt="instagram logo"> Instagram</a></li>
+              <li><a href="https://untappd.com/pikebrewing"><img src="../images/icons/untappd.png" alt="untappd logo"> Untappd</a></li>
           </ul>
       </div>
       <div id='map'>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10747.332525048134!2d-122.299239!3d47.668238!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb05b7c95104313ec!2sRavenna+Brewing+Co!5e0!3m2!1sen!2sus!4v1519275905013" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10759.68272059369!2d-122.339743!3d47.608232!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x31e69fa1b878c54d!2sThe+Pike+Brewing+Company!5e0!3m2!1sen!2sus!4v1519944044763" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
       <div id='address'>
           <ul>
-              <li>5408 26th Ave NE
+              <li>1415 First Avenue
               </li>
-              <li>Seattle, WA 98105</li>
+              <li>Seattle, WA 98101</li>
               <li>hours:</li>
                   <ul id=hours>
-                      <li>Sunday  Noon-9pm</li>
-                      <li>Monday  Closed</li>
-                      <li>Tuesday 4pm-10pm</li>
-                      <li>Wednesday 4pm-10pm</li>
-                      <li>Thursday  4pm-10pm</li>
-                      <li>Friday   1pm-10pm</li>
-                      <li>Saturday  1pm-10pm</li>
+                      <li>Daily: 11am - 9pm</li>
                   </ul>
-              <li>Phone: (206) 743-8450</li>
+              <li>Phone: (206) 622-6044</li>
+              <li>info@pikebrewing.com</li>
           </ul>
       </div>
     </section>
