--- a/pages/georgetown.html
+++ b/pages/georgetown.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Outer Planet Brewing Company</title>
+  <title>Georgetown Brewing Company</title>
   <link rel="stylesheet" type="text/css" href="../css/breweries.css" />
   <link rel="stylesheet" type="text/css" href="../css/reset.css" />
 </head>
@@ -44,6 +44,12 @@
                   <ul>
                     <li><a href="fremont.html">Fremont Brewing</a></li>
                     <li><a href="outlander.html">Outlander Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a>Georgetown</a>
+                  <ul>
+                    <li><a href="georgetown.html">Georgetown Brewing Company</a></li>
                   </ul>
                 </li>
                 <li>
@@ -92,17 +98,17 @@
     </header>
     <section>
       <div id='breweryInfo'>
-        <img src="../images/brewImages/outerplanet.png" alt="outer planet brewing">
-        <h2>Outer Planet Brewing Company</h2>
-        <p>Outer Planet Brewing, located in Capitol Hill, focused on providing high quality beers with a sci-fi twist for Seattle's thirsty people.</p>
+        <img src="../images/brewImages/georgetown.png" alt="georgetown brewing">
+        <h2>Georgetown Brewing Company</h2>
+        <p>Georgetown Brewing Company, an independently owned Seattle craft brewery and maker of Manny's Pale Ale. In May of 2017, after 14 years selling beer, we went from a draft-only production facility to canning select full-time beers (hey, we always said “never say never”). Sorry, still no brewpub, but we do have a retail shop where you can pick up kegs to go, growlers, cans and perhaps get a taste of our newest beer.</p>
       </div>
       <div id='social'>
           <ul>
-              <li><a href="http://www.seapinebrewing.com/">Outer Planet Brewing Website</a></li>
-              <li><a href="https://www.facebook.com/outerplanetcraftbrewing/"><img src="../images/icons/facebook.png" alt="facebook logo"> Facebook</a></li>
-              <li><a href="https://twitter.com/outerplanetbrew"><img src="../images/icons/twitter.png" alt="twitter logo"> Twitter</a></li>
-              <li><a href="https://www.instagram.com/outerplanetbrewing/"><img src="../images/icons/instagram.png" alt="instagram logo"> Instagram</a></li>
-              <li><a href="https://untappd.com/OuterPlanetBrewing"><img src="../images/icons/untappd.png" alt="untappd logo"> Untappd</a></li>
+              <li><a href="https://georgetownbeer.com/">Georgetown Brewing Website</a></li>
+              <li><a href="https://www.facebook.com/GeorgetownBrewing/"><img src="../images/icons/facebook.png" alt="facebook logo"> Facebook</a></li>
+              <li><a href="https://twitter.com/GeorgetownBeer"><img src="../images/icons/twitter.png" alt="twitter logo"> Twitter</a></li>
+              <li><a href="https://www.instagram.com/georgetownbrewingco/"><img src="../images/icons/instagram.png" alt="instagram logo"> Instagram</a></li>
+              <li><a href="https://untappd.com/gtb"><img src="../images/icons/untappd.png" alt="untappd logo"> Untappd</a></li>
           </ul>
       </div>
       <div id='map'>
@@ -110,17 +116,16 @@
       </div>
       <div id='address'>
           <ul>
-              <li>1812 12th Ave #100</li>
-              <li>Seattle, WA 98122</li>
+              <li>5200 Denver Ave S</li>
+              <li>Seattle, WA 98108</li>
               <li>hours:</li>
                   <ul id=hours>
-                      <li>Monday-Thursday: 4pm - 10pm</li>
-                      <li>Friday: 4pm - 12am</li>
-                      <li>Saturday: 1pm - 12am</li>
-                      <li>Sunday: 2pm - 10pm</li>
+                      <li>Monday-Friday: 10am - 6pm</li>
+                      <li>Saturday: 10am - 4am</li>
+                      <li>Sunday: Closed</li>
                   </ul>
-              <li>Phone: (206) 763-7000</li>
-              <li>contact@outerplanetbrewing.com</li>
+              <li>Phone: (206) 766-8055</li>
+              <li>sales@georgetownbeer.com</li>
           </ul>
       </div>
     </section>
