--- a/pages/cloudburst.html
+++ b/pages/cloudburst.html
@@ -125,6 +125,7 @@
     <footer>
       <p>&copy Seattle Brewery Finders</p>
     </footer>
-  </div> <!-- wrapper -->
+  </div>
+  <script src = "../app.js"></script>
 </body>
 </html>
