--- a/pages/urbanfam.html
+++ b/pages/urbanfam.html
@@ -123,6 +123,6 @@
       <p>&copy Seattle Brewery Finders</p>
     </footer>
   </div>
-  <script src = "app.js"></script>
+  <script src = "../app.js"></script>
 </body>
 </html>
