--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -124,12 +124,12 @@
           </div>
           <div class="website">
             <h4>Github: <a href="https://github.com/Confalone">github.com/Confalone</a> </h4>
-            <h4>Email: </h4>
+            <h4>Email: tconfalone@gmail.com</h4>
           </div>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis ultricies enim. Nullam eu sapien lorem. Morbi sed metus a velit dapibus aliquet. Sed velit lectus, ullamcorper sed ex et, tincidunt suscipit lacus. Etiam ut mi orci. Fusce non ante ac augue sagittis feugiat. Mauris eu quam interdum, fringilla enim nec, bibendum tortor. Vivamus consectetur blandit sapien vitae dictum. Nam ante tortor, auctor sit amet tortor quis, sodales tempus quam. Vivamus sit amet nisi facilisis, viverra eros sed, imperdiet urna. Praesent et ornare ligula, sit amet vulputate nibh. Morbi tristique risus metus, nec placerat sapien mattis eget.</p>
-        <h4>Favorite Beer: </h4>
-        <h4>Favorite Brewery: </h4>
+        <p>A life long resident of New York, Tyler Confalone, picked up with his family and moved to Seattle in September, 2017.  Tyler recently retired from the finance industry and is a stay at home dad.  Although he loves his present situation as a stay at home dad Tyler is learning javascript to hopefully start a new career in computer programming.  He really enjoys how much he has learned about learning in general and looks forward to learning more at Code Fellows.</p>
+        <h4>Favorite Beer: Heineken</h4>
+        <h4>Favorite Brewery: Fremont Brewery</h4>
       </div>
     </div>
     <!-- third -->
