started brew.js

--- a/pages/populuxe.html
+++ b/pages/populuxe.html
@@ -88,6 +88,9 @@
         </nav>
   </header>
   <section>
+    <div id='rerun'>
+      <p>Not satisfied with your current choice? <button id='btn2'>Rerun!</button></p>
+    </div>
     <div id='breweryInfo'>
         <img src="../images/brewImages/populuxelogo.jpg" alt="Populuxe Brewing" width="300">
       <h2>Populuxe Brewing</h2>
@@ -126,5 +129,6 @@
     </footer>
   </div>
   <script src = "../app.js"></script>
+  <script src = "../brew.js"></script>
 </body>
 </html>
