updated some css

--- a/pages/home.html
+++ b/pages/home.html
@@ -16,10 +16,10 @@
           <ul>
             <li><a href="home.html">Home</a></li>
             <li><a href="../index.html">Finder</a></li>
-            <li><a>Breweries</a>
+            <li><a href="" id="breweries">Breweries</a>
             <ul>
               <li>
-                <a>Ballard</a>
+                <a class="street">Ballard</a>
                 <ul>
                   <li><a href="peddler.html">Peddler Brewing</a></li>
                   <li><a href="populuxe.html">Populuxe Brewing</a></li>
@@ -27,56 +27,56 @@
                 </ul>
               </li>
               <li>
-                <a>Capitol Hill</a>
+                <a class="street">Capitol Hill</a>
                 <ul>
                   <li><a href="optimism.html">Optimism Brewing</a></li>
                 </ul>
               </li>
               <li>
-                <a>Central District</a>
+                <a class="street">Central District</a>
                 <ul>
                   <li><a href="standard.html">Standard Brewing</a></li>
                 </ul>
               </li>
               <li>
-                <a>Fremont</a>
+                <a class="street">Fremont</a>
                 <ul>
                   <li><a href="fremont.html">Fremont Brewing</a></li>
                   <li><a href="outlander.html">Outlander Brewing</a></li>
                 </ul>
               </li>
               <li>
-                <a>Interbay</a>
+                <a class="street">Interbay</a>
                 <ul>
                   <li><a href="holymt.html">Holy Mountain Brewing</a></li>
                 </ul>
               </li>
               <li>
-                <a>Lake City</a>
+                <a class="street">Lake City</a>
                 <ul>
                   <li><a href="hellbent.html">Hellbent Brewing</a></li>
                 </ul>
               </li>
               <li>
-                <a>Magnolia</a>
+                <a class="street">Magnolia</a>
                 <ul>
                   <li><a href="urbanfam.html">Urban Family Brewing</a></li>
                 </ul>
               </li>
               <li>
-                <a>Pike Place</a>
+                <a class="street">Pike Place</a>
                 <ul>
                   <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
                 </ul>
               </li>
               <li>
-                <a>SoDo</a>
+                <a class="street">SoDo</a>
                 <ul>
                   <li><a href="twobeers.html">Two Beers Brewing</a></li>
                 </ul>
               </li>
               <li>
-                <a>Ravenna</a>
+                <a class="street">Ravenna</a>
                 <ul>
                   <li><a href="ravenna.html">Ravenna Brewing</a></li>
                 </ul>
