--- a/pages/index.html
+++ b/pages/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Seattle Brewery Finder</title>
-  <link rel="stylesheet" type="text/css" href="css/index.css" />
+  <link rel="stylesheet" type="text/css" href="../css/index.css" />
   <!-- <link rel="stylesheet" type="text/css" href="css/reset.css" /> -->
 </head>
 <body>
@@ -152,6 +152,6 @@
         &copy; Seattle Brewery Finder
     </footer>
   </div><!-- .wrapper -->
-  <script src="app.js"></script>
+  <script src="../app.js"></script>
 </body>
 </html>
